--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@sendgrid/mail": "^8.1.4",
@@ -28,7 +29,10 @@
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-localization": "~16.0.1",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.21",
@@ -37,20 +41,30 @@
     "expo-system-ui": "^4.0.8",
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.2",
+    "i18next": "^24.2.2",
+    "i18next-http-backend": "^3.0.2",
     "nativewind": "^4.1.23",
     "node-appwrite": "^15.0.0",
     "node-fetch-native-with-agent": "^1.7.2",
     "project1": "file:",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "^15.4.1",
     "react-native": "0.76.7",
     "react-native-appwrite": "^0.7.0",
+    "react-native-bubble-chat": "^0.1.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-chat-ui": "^0.1.9",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-chat": "^2.8.0",
+    "react-native-keyboard-controller": "^1.16.7",
+    "react-native-localization": "^2.3.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-simple-chat": "^0.1.1",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-svg": "^15.8.0",
     "react-native-url-polyfill": "^2.0.0",
